[package]
name = "mdbook-yml-header"
version = "0.1.2"
authors = ["Vogt, Dimitrij <divogt@dima23.de>"]
documentation = "https://github.com/dvogt23/mdBook-yml-header/README.md"
edition = "2021"
keywords = ["book", "mdbook", "rustbook", "markdown", "preprocessor"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/dvogt23/mdbook-yml-header"
description = "mdBook preprocessor for removing yml header"

[dependencies]
clap = "3.*"
lazy_static = "1.*"
mdbook = "0.4.*"
regex = "1.*"
serde_json = "1.*"
